# Phi_0

./: .env.sample  .gitignore  README.md  environment.yml  pyproject.toml
baselines/: README.md
configs/: train_ablation1_vggt_full.yaml  train_ablation2_dit4dit_query.yaml  train_ablation3_both.yaml  train_ablation_base.yaml  train_ablation_baseline_704_400.yaml  train_ablation_dit4dit_query_704_400.yaml  train_act_dual_vggt.yaml  train_act_proprio_400.yaml  train_act_proprio_800.yaml  train_full.yaml  train_libero_spatial_act_200.yaml  train_libero_spatial_act_300.yaml  train_libero_spatial_act_delta_15k.yaml  train_libero_spatial_act_delta_15k_single.yaml  train_libero_spatial_act_delta_15k_single_action_only.yaml  train_libero_spatial_act_delta_15k_single_vlm_only.yaml  train_libero_spatial_act_delta_15k_single_vlm_only_bs128.yaml  train_libero_spatial_act_delta_300.yaml  train_libero_spatial_act_delta_30k.yaml  train_libero_spatial_vlm_act12_35k_ddp4.yaml  train_libero_spatial_vlm_act3_35k_ddp4.yaml  train_libero_spatial_vlm_dual_35k_ddp4.yaml  train_libero_spatial_vlm_only_35k_ddp4.yaml  train_libero_spatial_vlm_wrist_35k_ddp4.yaml  train_libero_spatial_vlm_wrist_35k_ddp8_bs32.yaml  train_overfit.yaml  train_pick_tissue_finetune_ddp4.yaml  train_pick_tissue_finetune_rtc_ddp4.yaml  train_pick_tissue_xperience_unified_ddp4_23k.yaml  train_pick_tissue_xperience_unified_ddp4_3k.yaml  train_pick_tissue_xperience_unified_ddp4_8k.yaml  train_simple_g1_act.yaml  train_simple_g1_smoke.yaml  train_sonic_unified_act.yaml  train_sonic_unified_ddp4_8k.yaml  train_xperience_unified.yaml  train_xperience_unified_smoke.yaml
docs/: calvin_bridge_head.md  unified_action_design.md  vla_adapter_alignment.md
scripts/: audit_fk_pipeline.py  benchmark_deploy.py  benchmark_train_perf.py  check_benchmark_data.py  check_train_ready.py  compare_ab2_ab3_viz.py  compare_ablation_704_viz.py  compare_dual_vggt_baseline.py  compute_action_stats.py  debug_dual_tower_outputs.py  debug_viz_alignment.py  debug_vlm_agent_speech.py  decode_closed_loop_npz.py  deploy_g1.py  diag_libero_policy_gap.py  download_calvin_assets.sh  download_cosmos_weights.py  download_samples.py  (+98 more)
(+283 files in other folders)
