[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phi0"
version = "0.1.0"
description = "Phi_0: Qwen3-VL + ACT/FM action head with optional VGGT fusion"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.12.0",
  "av>=16.0.0",
  "einops>=0.8.0",
  "h5py>=3.11.0",
  "huggingface-hub>=0.29.0",
  "hydra-core>=1.3.2",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "numpy>=1.26.0",
  "omegaconf>=2.3.0",
  "opencv-python>=4.10.0",
  "pillow>=10.0.0",
  "rich>=14.0.0",
  "scipy>=1.11.0",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "tqdm>=4.66.0",
  "transformers>=4.57.6",
  "qwen-vl-utils>=0.0.14",
  "diffusers>=0.38.0",
]

[project.optional-dependencies]
train = [
  "deepspeed>=0.18.0",
  "wandb>=0.23.0",
  "fastwam",
]
serve = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
]
agent = [
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
]
simple = [
  "lerobot>=0.1.0",
]
viz = [
  "smplx>=0.1.28",
  "trimesh>=4.0.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["phi0*"]
